Fix the color bar alignment
When choosing the color, the alignment was incorrect for the colors
with long names (the ones with two names).

--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,7 @@ textarea {
   border: 1px solid #d2d3d4;
   width: 60px;
   height: 60px;
-  padding-top: 10px;
+  padding-top: 20px;
   display: inline-block;
   cursor: pointer;
   border-radius: 4px;
